DD-93 fix tiles alignment

--- a/themes/custom/droopler_theme/scss/components/_d_p_reference_content.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_reference_content.scss
@@ -7,27 +7,29 @@ $d-p-reference-content-item-margin-right: -10px !default;
 $d-p-reference-content-content-padding: 5px !default;
 
 .d-p-reference-content-wrapper {
-  padding-top: $d-p-reference-content-padding-y;
-  padding-bottom: $d-p-reference-content-padding-y;
-  .field--wrapper {
-    overflow: hidden;
-    @include media-breakpoint-down(lg) {
-      padding: 0 0 0 $d-p-reference-content-content-padding;
-    }
-    .field__item--wrapper {
-      padding: 0 $d-p-reference-content-item-padding $d-p-reference-content-item-padding 0;
-      @include media-breakpoint-up(lg) {
-        &:last-child {
-          padding-right: 0;
-        }
+  overflow: hidden;
+
+  .field--name-field-d-p-reference-content {
+    padding-top: $d-p-reference-content-padding-y;
+    padding-bottom: $d-p-reference-content-padding-y;
+
+    margin-right: -$d-p-reference-content-item-padding;
+
+    .field--wrapper {
+      overflow: hidden;
+      @include media-breakpoint-down(lg) {
+        padding: 0 0 0 $d-p-reference-content-content-padding;
+      }
+      .field__item--wrapper {
+        padding: 0 $d-p-reference-content-item-padding $d-p-reference-content-item-padding 0;
       }
     }
-  }
-  .field--name-field-d-main-title {
-    margin-bottom: 40px;
-    &:after {
-      @include decoration-header-line-main-center;
-      background: $color-helen;
+    .field--name-field-d-main-title {
+      margin-bottom: 40px;
+      &:after {
+        @include decoration-header-line-main-center;
+        background: $color-helen;
+      }
     }
   }
 }
